--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -13,6 +13,8 @@ license = "MIT"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+html_parser = "0.7.0"
+pug = "0.2.0"
 wasm-bindgen = "0.2.86"
 
 [dev-dependencies]
